6381677/src/uva/oberon0/parser/OberonParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g 2011-02-06 16:35:59

package uva.oberon0.parser;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;

import uva.oberon0.abstractsyntax.declarations.Constant;
import uva.oberon0.abstractsyntax.declarations.CustomType;
import uva.oberon0.abstractsyntax.declarations.DeclarationList;
import uva.oberon0.abstractsyntax.declarations.Module;
import uva.oberon0.abstractsyntax.declarations.Procedure;
import uva.oberon0.abstractsyntax.declarations.Variable;
import uva.oberon0.abstractsyntax.declarations.VariableList;
import uva.oberon0.abstractsyntax.expressions.Addition;
import uva.oberon0.abstractsyntax.expressions.Division;
import uva.oberon0.abstractsyntax.expressions.Equal;
import uva.oberon0.abstractsyntax.expressions.Expression;
import uva.oberon0.abstractsyntax.expressions.ExpressionList;
import uva.oberon0.abstractsyntax.expressions.GreatherThan;
import uva.oberon0.abstractsyntax.expressions.GreatherThanOrEqualTo;
import uva.oberon0.abstractsyntax.expressions.IntegerValue;
import uva.oberon0.abstractsyntax.expressions.LessThan;
import uva.oberon0.abstractsyntax.expressions.LessThanOrEqualTo;
import uva.oberon0.abstractsyntax.expressions.And;
import uva.oberon0.abstractsyntax.expressions.Or;
import uva.oberon0.abstractsyntax.expressions.Modulo;
import uva.oberon0.abstractsyntax.expressions.Multiplication;
import uva.oberon0.abstractsyntax.expressions.Negative;
import uva.oberon0.abstractsyntax.expressions.Not;
import uva.oberon0.abstractsyntax.expressions.NotEqual;
import uva.oberon0.abstractsyntax.expressions.Positive;
import uva.oberon0.abstractsyntax.expressions.Reference;
import uva.oberon0.abstractsyntax.expressions.Subtraction;
import uva.oberon0.abstractsyntax.statements.Assign;
import uva.oberon0.abstractsyntax.statements.Call;
import uva.oberon0.abstractsyntax.statements.CallProcedure;
import uva.oberon0.abstractsyntax.statements.CallRead;
import uva.oberon0.abstractsyntax.statements.CallWrite;
import uva.oberon0.abstractsyntax.statements.CallWriteLn;
import uva.oberon0.abstractsyntax.statements.If;
import uva.oberon0.abstractsyntax.statements.IfListForElsIf;
import uva.oberon0.abstractsyntax.statements.IfPartForElsIf;
import uva.oberon0.abstractsyntax.statements.Statement;
import uva.oberon0.abstractsyntax.statements.StatementList;
import uva.oberon0.abstractsyntax.statements.While;
import uva.oberon0.abstractsyntax.types.ArrayType;
import uva.oberon0.abstractsyntax.types.BaseType;
import uva.oberon0.abstractsyntax.types.ID;
import uva.oberon0.abstractsyntax.types.IDList;
import uva.oberon0.abstractsyntax.types.IDType;
import uva.oberon0.abstractsyntax.types.IntType;
import uva.oberon0.abstractsyntax.types.RecordField;
import uva.oberon0.abstractsyntax.types.RecordFieldList;
import uva.oberon0.abstractsyntax.types.RecordType;

@SuppressWarnings("unused")
public class OberonParser extends Parser {
	public static final String[] tokenNames = new String[] { "<invalid>",
			"<EOR>", "<DOWN>", "<UP>", "MODULE", "PROCEDURE", "CONST", "VAR",
			"TYPE", "IF", "THEN", "ELSE", "ELSIF", "WHILE", "BEGIN", "END",
			"DO", "EQUAL", "UNEQUAL", "LESS", "LESS_EQUAL", "GREAT",
			"GREAT_EQUAL", "MIN", "PLUS", "MUL", "DIV", "MOD", "AND", "OR",
			"NOT", "DECLARATIONS", "INPUTVARS", "CALL", "CALL_READ",
			"CALL_WRITE", "CALL_WRITELN", "ASSIGN", "INTEGER", "ARRAY",
			"RECORD", "OF", "ID", "INT", "WHITESPACE", "';'", "'.'", "':'",
			"'('", "')'", "','", "'['", "']'" };
	public static final int EOF = -1;
	public static final int T__45 = 45;
	public static final int T__46 = 46;
	public static final int T__47 = 47;
	public static final int T__48 = 48;
	public static final int T__49 = 49;
	public static final int T__50 = 50;
	public static final int T__51 = 51;
	public static final int T__52 = 52;
	public static final int MODULE = 4;
	public static final int PROCEDURE = 5;
	public static final int CONST = 6;
	public static final int VAR = 7;
	public static final int TYPE = 8;
	public static final int IF = 9;
	public static final int THEN = 10;
	public static final int ELSE = 11;
	public static final int ELSIF = 12;
	public static final int WHILE = 13;
	public static final int BEGIN = 14;
	public static final int END = 15;
	public static final int DO = 16;
	public static final int EQUAL = 17;
	public static final int UNEQUAL = 18;
	public static final int LESS = 19;
	public static final int LESS_EQUAL = 20;
	public static final int GREAT = 21;
	public static final int GREAT_EQUAL = 22;
	public static final int MIN = 23;
	public static final int PLUS = 24;
	public static final int MUL = 25;
	public static final int DIV = 26;
	public static final int MOD = 27;
	public static final int AND = 28;
	public static final int OR = 29;
	public static final int NOT = 30;
	public static final int DECLARATIONS = 31;
	public static final int INPUTVARS = 32;
	public static final int CALL = 33;
	public static final int CALL_READ = 34;
	public static final int CALL_WRITE = 35;
	public static final int CALL_WRITELN = 36;
	public static final int ASSIGN = 37;
	public static final int INTEGER = 38;
	public static final int ARRAY = 39;
	public static final int RECORD = 40;
	public static final int OF = 41;
	public static final int ID = 42;
	public static final int INT = 43;
	public static final int WHITESPACE = 44;

	// delegates
	// delegators

	public OberonParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}

	public OberonParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);

	}

	public String[] getTokenNames() {
		return OberonParser.tokenNames;
	}

	public String getGrammarFileName() {
		return "D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g";
	}

	// $ANTLR start "module"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:72:1:
	// module returns [Module node] : MODULE node_id= id ';' node_declarations=
	// declarations BEGIN node_statements= statements END id '.' ;
	public final Module module() throws RecognitionException {
		Module node = null;

		ID node_id = null;

		DeclarationList node_declarations = null;

		StatementList node_statements = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:73:2: ( MODULE
			// node_id= id ';' node_declarations= declarations BEGIN
			// node_statements= statements END id '.' )
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:73:4: MODULE
			// node_id= id ';' node_declarations= declarations BEGIN
			// node_statements= statements END id '.'
			{
				match(input, MODULE, FOLLOW_MODULE_in_module318);
				pushFollow(FOLLOW_id_in_module322);
				node_id = id();

				state._fsp--;

				match(input, 45, FOLLOW_45_in_module324);
				pushFollow(FOLLOW_declarations_in_module330);
				node_declarations = declarations();

				state._fsp--;

				match(input, BEGIN, FOLLOW_BEGIN_in_module334);
				pushFollow(FOLLOW_statements_in_module340);
				node_statements = statements();

				state._fsp--;

				match(input, END, FOLLOW_END_in_module344);
				pushFollow(FOLLOW_id_in_module346);
				id();

				state._fsp--;

				match(input, 46, FOLLOW_46_in_module348);
				node = new Module(node_id, node_declarations, node_statements);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return node;
	}

	// $ANTLR end "module"

	// $ANTLR start "declarations"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:79:1:
	// declarations returns [DeclarationList node] : ( constDeclaration[node] |
	// varDeclaration[node] | typeDeclaration[node] | procedureDeclaration[node]
	// )* ;
	public final DeclarationList declarations() throws RecognitionException {
		DeclarationList node = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:79:45: ( (
			// constDeclaration[node] | varDeclaration[node] |
			// typeDeclaration[node] | procedureDeclaration[node] )* )
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:79:52: (
			// constDeclaration[node] | varDeclaration[node] |
			// typeDeclaration[node] | procedureDeclaration[node] )*
			{
				node = new DeclarationList();
				// D:\\Projects
				// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:80:3: (
				// constDeclaration[node] | varDeclaration[node] |
				// typeDeclaration[node] | procedureDeclaration[node] )*
				loop1: do {
					int alt1 = 5;
					switch (input.LA(1)) {
					case CONST: {
						alt1 = 1;
					}
						break;
					case VAR: {
						alt1 = 2;
					}
						break;
					case TYPE: {
						alt1 = 3;
					}
						break;
					case PROCEDURE: {
						alt1 = 4;
					}
						break;

					}

					switch (alt1) {
					case 1:
						// D:\\Projects
						// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:80:4:
						// constDeclaration[node]
					{
						pushFollow(FOLLOW_constDeclaration_in_declarations380);
						constDeclaration(node);

						state._fsp--;

					}
						break;
					case 2:
						// D:\\Projects
						// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:80:27:
						// varDeclaration[node]
					{
						pushFollow(FOLLOW_varDeclaration_in_declarations383);
						varDeclaration(node);

						state._fsp--;

					}
						break;
					case 3:
						// D:\\Projects
						// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:80:48:
						// typeDeclaration[node]
					{
						pushFollow(FOLLOW_typeDeclaration_in_declarations386);
						typeDeclaration(node);

						state._fsp--;

					}
						break;
					case 4:
						// D:\\Projects
						// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:80:70:
						// procedureDeclaration[node]
					{
						pushFollow(FOLLOW_procedureDeclaration_in_declarations389);
						procedureDeclaration(node);

						state._fsp--;

					}
						break;

					default:
						break loop1;
					}
				} while (true);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return node;
	}

	// $ANTLR end "declarations"

	// $ANTLR start "constDeclaration"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:83:1:
	// constDeclaration[DeclarationList list] : CONST node_id= id '=' node_exp=
	// expression ';' ;
	public final void constDeclaration(DeclarationList list)
			throws RecognitionException {
		ID node_id = null;

		Expression node_exp = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:84:2: ( CONST
			// node_id= id '=' node_exp= expression ';' )
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:84:4: CONST
			// node_id= id '=' node_exp= expression ';'
			{
				match(input, CONST, FOLLOW_CONST_in_constDeclaration406);
				pushFollow(FOLLOW_id_in_constDeclaration410);
				node_id = id();

				state._fsp--;

				match(input, EQUAL, FOLLOW_EQUAL_in_constDeclaration412);
				pushFollow(FOLLOW_expression_in_constDeclaration416);
				node_exp = expression();

				state._fsp--;

				match(input, 45, FOLLOW_45_in_constDeclaration418);
				list.add(new Constant(node_id, node_exp));

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return;
	}

	// $ANTLR end "constDeclaration"

	// $ANTLR start "varDeclaration"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:86:1:
	// varDeclaration[DeclarationList list] : VAR (node_ids= idList ':'
	// node_type= type ';' )* ;
	public final void varDeclaration(DeclarationList list)
			throws RecognitionException {
		IDList node_ids = null;

		BaseType node_type = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:87:2: ( VAR
			// (node_ids= idList ':' node_type= type ';' )* )
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:87:4: VAR
			// (node_ids= idList ':' node_type= type ';' )*
			{
				match(input, VAR, FOLLOW_VAR_in_varDeclaration434);
				// D:\\Projects
				// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:87:8:
				// (node_ids= idList ':' node_type= type ';' )*
				loop2: do {
					int alt2 = 2;
					int LA2_0 = input.LA(1);

					if ((LA2_0 == ID)) {
						alt2 = 1;
					}

					switch (alt2) {
					case 1:
						// D:\\Projects
						// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:87:9:
						// node_ids= idList ':' node_type= type ';'
					{
						pushFollow(FOLLOW_idList_in_varDeclaration439);
						node_ids = idList();

						state._fsp--;

						match(input, 47, FOLLOW_47_in_varDeclaration441);
						pushFollow(FOLLOW_type_in_varDeclaration445);
						node_type = type();

						state._fsp--;

						match(input, 45, FOLLOW_45_in_varDeclaration447);
						for (ID id : node_ids) {
							list.add(new Variable(id, node_type));
						}

					}
						break;

					default:
						break loop2;
					}
				} while (true);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return;
	}

	// $ANTLR end "varDeclaration"

	// $ANTLR start "typeDeclaration"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:89:1:
	// typeDeclaration[DeclarationList list] : TYPE node_id= id '=' node_type=
	// type ';' ;
	public final void typeDeclaration(DeclarationList list)
			throws RecognitionException {
		ID node_id = null;

		BaseType node_type = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:90:2: ( TYPE
			// node_id= id '=' node_type= type ';' )
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:90:4: TYPE
			// node_id= id '=' node_type= type ';'
			{
				match(input, TYPE, FOLLOW_TYPE_in_typeDeclaration466);
				pushFollow(FOLLOW_id_in_typeDeclaration470);
				node_id = id();

				state._fsp--;

				match(input, EQUAL, FOLLOW_EQUAL_in_typeDeclaration472);
				pushFollow(FOLLOW_type_in_typeDeclaration476);
				node_type = type();

				state._fsp--;

				match(input, 45, FOLLOW_45_in_typeDeclaration478);
				list.add(new CustomType(node_id, node_type));

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return;
	}

	// $ANTLR end "typeDeclaration"

	// $ANTLR start "procedureDeclaration"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:92:1:
	// procedureDeclaration[DeclarationList list] : PROCEDURE node_id= id ( '('
	// node_params= procedureParams ')' )? ';' node_declarations= declarations
	// BEGIN node_statements= statements END id ';' ;
	public final void procedureDeclaration(DeclarationList list)
			throws RecognitionException {
		ID node_id = null;

		VariableList node_params = null;

		DeclarationList node_declarations = null;

		StatementList node_statements = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:93:2: (
			// PROCEDURE node_id= id ( '(' node_params= procedureParams ')' )?
			// ';' node_declarations= declarations BEGIN node_statements=
			// statements END id ';' )
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:93:4: PROCEDURE
			// node_id= id ( '(' node_params= procedureParams ')' )? ';'
			// node_declarations= declarations BEGIN node_statements= statements
			// END id ';'
			{
				match(input, PROCEDURE,
						FOLLOW_PROCEDURE_in_procedureDeclaration496);
				pushFollow(FOLLOW_id_in_procedureDeclaration500);
				node_id = id();

				state._fsp--;

				// D:\\Projects
				// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:93:25: (
				// '(' node_params= procedureParams ')' )?
				int alt3 = 2;
				int LA3_0 = input.LA(1);

				if ((LA3_0 == 48)) {
					alt3 = 1;
				}
				switch (alt3) {
				case 1:
					// D:\\Projects
					// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:93:26:
					// '(' node_params= procedureParams ')'
				{
					match(input, 48, FOLLOW_48_in_procedureDeclaration503);
					pushFollow(FOLLOW_procedureParams_in_procedureDeclaration507);
					node_params = procedureParams();

					state._fsp--;

					match(input, 49, FOLLOW_49_in_procedureDeclaration509);

				}
					break;

				}

				match(input, 45, FOLLOW_45_in_procedureDeclaration513);
				pushFollow(FOLLOW_declarations_in_procedureDeclaration519);
				node_declarations = declarations();

				state._fsp--;

				match(input, BEGIN, FOLLOW_BEGIN_in_procedureDeclaration523);
				pushFollow(FOLLOW_statements_in_procedureDeclaration529);
				node_statements = statements();

				state._fsp--;

				match(input, END, FOLLOW_END_in_procedureDeclaration533);
				pushFollow(FOLLOW_id_in_procedureDeclaration535);
				id();

				state._fsp--;

				match(input, 45, FOLLOW_45_in_procedureDeclaration537);
				list.add(new Procedure(node_id, node_params, node_declarations,
						node_statements));

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return;
	}

	// $ANTLR end "procedureDeclaration"

	// $ANTLR start "procedureParams"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:99:1:
	// procedureParams returns [VariableList node] : node_declaration=
	// procedureParam[node] ( ';' node_declaration= procedureParam[node] )* ;
	public final VariableList procedureParams() throws RecognitionException {
		VariableList node = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:99:45:
			// (node_declaration= procedureParam[node] ( ';' node_declaration=
			// procedureParam[node] )* )
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:99:52:
			// node_declaration= procedureParam[node] ( ';' node_declaration=
			// procedureParam[node] )*
			{
				node = new VariableList();
				pushFollow(FOLLOW_procedureParam_in_procedureParams572);
				procedureParam(node);

				state._fsp--;

				// D:\\Projects
				// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:100:43: (
				// ';' node_declaration= procedureParam[node] )*
				loop4: do {
					int alt4 = 2;
					int LA4_0 = input.LA(1);

					if ((LA4_0 == 45)) {
						alt4 = 1;
					}

					switch (alt4) {
					case 1:
						// D:\\Projects
						// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:100:44:
						// ';' node_declaration= procedureParam[node]
					{
						match(input, 45, FOLLOW_45_in_procedureParams576);
						pushFollow(FOLLOW_procedureParam_in_procedureParams582);
						procedureParam(node);

						state._fsp--;

					}
						break;

					default:
						break loop4;
					}
				} while (true);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return node;
	}

	// $ANTLR end "procedureParams"

	// $ANTLR start "procedureParam"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:103:1:
	// procedureParam[VariableList list] : ( ( VAR )? node_ids= idList ':'
	// node_type= type )* ;
	public final void procedureParam(VariableList list)
			throws RecognitionException {
		IDList node_ids = null;

		BaseType node_type = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:104:2: ( ( (
			// VAR )? node_ids= idList ':' node_type= type )* )
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:104:4: ( ( VAR
			// )? node_ids= idList ':' node_type= type )*
			{
				// D:\\Projects
				// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:104:4: ( (
				// VAR )? node_ids= idList ':' node_type= type )*
				loop6: do {
					int alt6 = 2;
					int LA6_0 = input.LA(1);

					if ((LA6_0 == VAR || LA6_0 == ID)) {
						alt6 = 1;
					}

					switch (alt6) {
					case 1:
						// D:\\Projects
						// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:104:5:
						// ( VAR )? node_ids= idList ':' node_type= type
					{
						boolean byRef = false;
						// D:\\Projects
						// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:104:28:
						// ( VAR )?
						int alt5 = 2;
						int LA5_0 = input.LA(1);

						if ((LA5_0 == VAR)) {
							alt5 = 1;
						}
						switch (alt5) {
						case 1:
							// D:\\Projects
							// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:104:29:
							// VAR
						{
							match(input, VAR, FOLLOW_VAR_in_procedureParam605);
							byRef = true;

						}
							break;

						}

						pushFollow(FOLLOW_idList_in_procedureParam613);
						node_ids = idList();

						state._fsp--;

						match(input, 47, FOLLOW_47_in_procedureParam615);
						pushFollow(FOLLOW_type_in_procedureParam619);
						node_type = type();

						state._fsp--;

						for (ID id : node_ids) {
							list.add(new Variable(id, node_type, byRef));
						}

					}
						break;

					default:
						break loop6;
					}
				} while (true);

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
		}
		return;
	}

	// $ANTLR end "procedureParam"

	// $ANTLR start "procedureCall"
	// D:\\Projects UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:106:1:
	// procedureCall returns [Call node] : ( CALL_READ (call_vars=
	// procedureActualParams )? | CALL_WRITE (call_vars= procedureActualParams
	// )? | CALL_WRITELN (call_vars= procedureActualParams )? | ID (call_vars=
	// procedureActualParams )? ) ;
	public final Call procedureCall() throws RecognitionException {
		Call node = null;

		Token ID1 = null;
		ExpressionList call_vars = null;

		try {
			// D:\\Projects
			// UVA\\Oberon0\\src\\uva\\oberon0\\parser\\Oberon.g:107:6: ( (
			// CALL_READ (call_vars= procedureActualParams )? | CALL_WRITE
			// (call_vars= procedureActualParams )? | CALL_WRITELN (call_vars=
			// procedureActualParams )? | ID (call_vars= procedureActualParams
			// )? ) )
